--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -11,8 +11,8 @@ body {
 #header {
 	background-color: #e6f6f1;
 	width: 100%;
-	padding: 0px;
-	padding-left: 30px;
+	padding: 35px;
+	text-align: center;
 	font-size: 65px;
 	opacity: 0.75;
 }
